--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "tailwindcss": "^3.3.3",
     "zod": "^3.24.2"
