--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-seo": "^6.6.0",
+    "next.js": "^1.0.3",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
