--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "scripts": {
+  "build": "next build",
+  "postbuild": "next-sitemap"
+},
+
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@react-google-maps/api": "^2.20.6",
@@ -19,6 +24,7 @@
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-seo": "^6.6.0",
+    "next-sitemap": "^4.2.3",
     "next.js": "^1.0.3",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
