--- a/package.json
+++ b/package.json
@@ -3,16 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "postbuild": "next-sitemap"
   },
-  "scripts": {
-  "build": "next build",
-  "postbuild": "next-sitemap"
-},
-
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@react-google-maps/api": "^2.20.6",
@@ -22,13 +15,13 @@
     "framer-motion": "^12.6.3",
     "i18next": "^24.2.3",
     "lucide-react": "^0.487.0",
-    "next": "15.2.4",
+    "next": "^15.2.4",
     "next-seo": "^6.6.0",
     "next-sitemap": "^4.2.3",
     "next.js": "^1.0.3",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
