--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "postcss-nesting": "^13.0.1",
     "typescript": "^5"
   }
 }
