--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@hookform/resolvers": "^5.0.1",
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/typography": "^0.5.16",
